--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Engini System Integration</title>
+  <title>Engini</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -93,3 +93,4 @@
   <script src="app.js"></script>
 </body>
 </html>
+
